tests/baselines/reference/incompleteDottedExpressionAtEOF.errors.txt
==== tests/cases/compiler/incompleteDottedExpressionAtEOF.ts (1 errors) ====
    // used to leak __missing into error message
    var p2 = window. 
                     
!!! incompleteDottedExpressionAtEOF.ts(2,18): error TS1003: Identifier expected.